tests/datakinds/should_fail/all.T

test('FailDataKind1', normal, compile_fail, [''])
test('FailDataKind2', normal, compile_fail, [''])
test('FailDataKind3', normal, compile_fail, [''])
test('FailDataKind4', normal, compile_fail, [''])
test('FailDataKind5', normal, compile_fail, [''])
test('FailDataKind6', normal, compile_fail, [''])
test('FailDataKind7', normal, compile_fail, [''])
test('FailDataKind8', normal, compile_fail, [''])
